# MosaiQC

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml
src/cpp/: CMakeLists.txt  GED_weighted.cpp  GED_weighted.hpp  METIS_solver.cpp  METIS_solver.hpp  QAP_fw.cpp  QAP_fw.hpp  circuit.cpp  circuit.hpp  circuit_graph.cpp  circuit_graph.hpp  core.cpp  device.cpp  device.hpp  metis_partition_test.cpp  partition_refiner.cpp  partition_refiner.hpp  topology_graph.cpp  topology_graph.hpp
src/opt_core/: __init__.py  _core.pyi  core.py  cutting_solver.py  device_manager.py  ir.py
src/opt_core/frontends/: __init__.py  qiskit_adapter.py
tests/: device_mngr_test.py  test_circuit.py  test_cutting_solver.py  test_functional.py  test_functional_reconstruct.py  test_pybind.py  test_runtime.py  test_temporal.py  test_topology.py  wirecut.py  wirecut_test.py
